--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
-ALURA FLIX
+<header>
+    <link rel="stylesheet" href="styles.css" />
+</header>
+
+<body>
+
+<header>ALURAFLIX</header>
 
 
-Sorriso no Rosto - Mc Leozin, Boladin 211 e Mc Rick - Dj L Martins
-<div id="Musica-funk"></div>
+<h1>Sorriso no Rosto - Mc Leozin, Boladin 211 e Mc Rick - Dj L Martins</h1>
+<p>#musica-funk </p>
+
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D9f69FQwETk?si=2hldEAfnPofvSdI9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+</body>
