--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
-<header>
+<html lang="pt-br">
+
+<head>
     <link rel="stylesheet" href="styles.css" />
-</header>
+    <tittle>AluraFlix</tittle>
+</head>
 
 <body>
 
-<header>ALURAFLIX</header>
+    <header>ALURAFLIX</header>
 
+    <section>
+        <div class="chamada-texto"> 
+            <h1>Sorriso no Rosto - Mc Leozin, Boladin 211 e Mc Rick - Dj L Martins</h1>
+            <p>#musica-funk </p>
+        </div>
 
-<h1>Sorriso no Rosto - Mc Leozin, Boladin 211 e Mc Rick - Dj L Martins</h1>
-<p>#musica-funk </p>
-
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/D9f69FQwETk?si=2hldEAfnPofvSdI9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/D9f69FQwETk?si=2hldEAfnPofvSdI9"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+  gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
 </body>
+
+</html>
