--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 
 <head>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <tittle>AluraFlix</tittle>
-</head>
 
 <body>
 
     <header>ALURAFLIX</header>
 
     <section>
-        <div class="chamada-texto"> 
+        <div class="chamada-texto">
             <h1>Sorriso no Rosto - Mc Leozin, Boladin 211 e Mc Rick - Dj L Martins</h1>
             <p>#musica-funk </p>
         </div>
@@ -19,6 +23,24 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/D9f69FQwETk?si=2hldEAfnPofvSdI9"
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
   gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section>
+        <h2>Clipes de Músicas </h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=YcPaOASoL0Q">
+                <img src="https://img.youtube.com/vi/YcPaOASoL0Q/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Uxtgz1FU3XA">
+                <img src="https://img.youtube.com/vi/Uxtgz1FU3XA/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=zG5gWncAhls">
+                <img src="https://img.youtube.com/vi/zG5gWncAhls/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=TIfjs9qWlBM">
+                <img src="https://img.youtube.com/vi/TIfjs9qWlBM/maxresdefault.jpg" />
+            </a>
         </div>
     </section>
 
